--- a/signup.html
+++ b/signup.html
@@ -7,32 +7,27 @@ icon: fas fa-user-plus
 
 <p>
   We have a long-standing open recruitment policy. If you are interested in joining,
-  <a href="{{ site.baseurl }}{% link agreement.html %}">please review the agreement</a> and follow these instructions. The only account you need to create is a Discord account
-  if you do not already have one.
+  <a href="{{ site.baseurl }}{% link agreement.html %}">please review the agreement</a> and follow these instructions. A free <a href="https://www.discord.com">Discord</a> account is required to complete this process.
 </p>
 <h3>
-  Choose a Final Fantasy Character
+  Select a Final Fantasy Character
 </h3>
 <p>
   Our community has a Final Fantasy theme meaning you must choose a Final Fantasy Character as your persona. Any characters listed on
   the
-  <a href="https://ffrkstrategy.gamematome.jp/game/951/wiki/Character">Final Fantasy Record Keeper wiki</a> are acceptable. We will also accept characters not on this list as long we can verify
-  the character is from a Final Fantasy game. Spin-offs are included.
+  <a href="https://ffrkstrategy.gamematome.jp/game/951/wiki/Character">Final Fantasy Record Keeper wiki</a> are acceptable. Characters not on this list are also acceptable when verified to be in any Final Fantasy game including spin-offs.
 </p>
 <p>
-  If the character was previously used by a past member, it can be re-used. The character you chose must be inactive for at
-  least 6 months. When re-using, the past member using the name will be
-  <em>versioned</em> such that a numerical digit will be appended to their name for historical and archiving purposes.
+  Previously used characters can be re-used if the past membe has been inactive for at least 6 months. When re-using, the past member using the name will be
+  <em>versioned</em> by adding a numerical digit, and will select a new character upon reactivation.
   The new member (you) will not have a digit in your name.
 </p>
 <p>
-  <a href="{{ site.baseurl }}{% link index.html %}#leadership">Start a dialogue with a Leader or Judge</a> for any clarification and help on trying to decide on a character or re-using
-  a previously inactive character.
-</p>
+  <a href="{{ site.baseurl }}{% link index.html %}#leadership">Start a dialogue with a Leader or Judge</a> for any clarification or help on completing this process.
 <h3>
   Join the Discord Server
 </h3>
 <p>
-  <a href="{{ site.discord }}">Use this invite link</a> to join the Discord server. We will set your name to the Final Fantasy Character agreed upon.
-  Once your character has been validated, you will be granted access to the rest of the server.
+  <a href="{{ site.discord }}">Use this invite link</a> to join the Discord server. Your nickname will be set to the Final Fantasy Character agreed upon.
+  When this process is completed, you will be granted full access to the server.
 </p>
