--- a/signup.html
+++ b/signup.html
@@ -6,20 +6,20 @@ icon: fas fa-user-plus
 ---
 
 <p>
-  We have a long-standing open recruitment policy. If you are interested in joining,
-  <a href="{{ site.baseurl }}{% link agreement.html %}">please review the agreement</a> and follow these instructions. A free <a href="https://www.discord.com">Discord</a> account is required to complete this process.
+
+  Please review <a href="{{ site.baseurl }}{% link agreement.html %}">this agreement</a> and follow these instructions. A free <a href="https://www.discord.com">Discord</a> account is required to complete the process.
 </p>
 <h3>
   Select a Final Fantasy Character
 </h3>
 <p>
-  Our community has a Final Fantasy theme meaning you must choose a Final Fantasy Character as your persona. Any characters listed on
-  the
-  <a href="https://ffrkstrategy.gamematome.jp/game/951/wiki/Character">Final Fantasy Record Keeper wiki</a> are acceptable. Characters not on this list are also acceptable when verified to be in any Final Fantasy game including spin-offs.
+  You must choose a Final Fantasy Character as your persona. Any characters listed on the
+  <a href="https://ffrkstrategy.gamematome.jp/game/951/wiki/Character">Final Fantasy Record Keeper wiki</a> are acceptable.
+  Characters not on this list are also acceptable when verified to be in any Final Fantasy game including spin-offs.
 </p>
 <p>
-  Previously used characters can be re-used if the past membe has been inactive for at least 6 months. When re-using, the past member using the name will be
-  <em>versioned</em> by adding a numerical digit, and will select a new character upon reactivation.
+  Previously used characters can be re-used if the past member has been inactive for at least 6 months. When re-using, 
+  the past member using the name will be <em>versioned</em> by adding a numerical digit, and will select a new character upon reactivation.
   The new member (you) will not have a digit in your name.
 </p>
 <p>
