--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@ icon: fas fa-user-plus
 </h3>
 <p>
   You must choose a Final Fantasy Character as your persona. Any characters listed on the
-  <a href="https://ffrkstrategy.gamematome.jp/game/951/wiki/Character">Final Fantasy Record Keeper wiki</a> are acceptable.
+  <a href="https://finalfantasy.fandom.com/wiki/Category:Character_lists">Final Fantasy wiki</a> are acceptable.
   Characters not on this list are also acceptable when verified to be in any Final Fantasy game including spin-offs.
 </p>
 <p>
